# controllers/reverses.js
@@ -7,20 +7,20 @@ const { validationResult } = require("express-validator");
 const getUserReverses = async (req, res) => {
   //#swagger.tags=['Reverses']
   console.log("get all reverses");
-  console.log("from params ", req.params.id);
+  console.log("from params ", req.params.githubId);
 
-  if (req.params.id == undefined || null) {
+  if (req.params.githubId == undefined || null) {
     console.log("Param is empty");
   }
 
-  if (req.params.id.length == 24) {
+  if (req.params.githubId.length > 0) {
     console.log("user id valid!");
-    const userId = new ObjectId(req.params.id);
+    const githubId = req.params.githubId;
     const result = await mongodb
       .getDatabase()
       .db()
       .collection("reverses")
-      .find({ _id: userId });
+      .findMany({ githubId });
     console.log("Param found!");
     console.log("this is the result ", JSON.stringify(result._eventsCount));
     result.toArray().then((reverses) => {
@@ -28,7 +28,7 @@ const getUserReverses = async (req, res) => {
       //analize if the sysstem found a user
       if (reverses.length == 0) {
         console.log("User reveses not found!");
-        return res.status(404).json({ error: "User not found" });
+        return res.status(404).json({ error: "User reverses not found" });
       }
       res.setHeader("Content-Type", "application/json");
       res.status(200).json(reverses);
