# controllers/transaction.js
@@ -5,7 +5,7 @@ const ObjectId = require("mongodb").ObjectId;
 const createTransaction = async (req, res) => {
   //#swagger.tags=['Transactions']
   console.log("request", req.body);
-  
+
   const transaction = {
     accountOrigin: req.body.accountOrigin,
     nameAccountOrigin: req.body.nameAccountOrigin,
@@ -13,16 +13,24 @@ const createTransaction = async (req, res) => {
     nameAccountDestiny: req.body.nameAccountDestiny,
     transactionDate: req.body.transactionDate,
     reference: req.body.reference,
-    status: "completed" 
-  }
+    amount: req.body.amount,
+    status: "completed",
+  };
+///check balance
+
+//if(){}
+
+// else
+//error not balance
+
 
   const validations = validationResult(req);
   console.log("validation errors ", validations);
   if (validations.errors.length > 0) {
-    let errorDescriptions = "Payload invalid :";
+    let errorDescriptions = "Transaction invalid :";
     validations.errors.map((er) => {
       errorDescriptions = errorDescriptions + " " + er.msg + ", ";
-      console.log("Some errors in the payload");
+      console.log("Some errors in the transaction payload");
     });
     console.log("descriptions ", errorDescriptions);
     return res.status(404).json({ error: `${errorDescriptions}` });
@@ -33,7 +41,7 @@ const createTransaction = async (req, res) => {
       .collection("transactions")
       .insertOne(transaction);
     if (response.acknowledged > 0) {
-      res.status(200).send('Money send successfully!');
+      res.status(200).send("Money send successfully!");
     } else {
       res
         .status(200)
@@ -44,55 +52,88 @@ const createTransaction = async (req, res) => {
 
 const reverseTransaction = async (req, res) => {
   //#swagger.tags=['Transactions']
-  console.log("Delete Transaction");
-  if (req.params.id.length == 24) {
-    const userId = new ObjectId(req.params.id);
-  console.log("this is the param ", userId);
-
-  const response = await mongodb
+  const result = await mongodb
     .getDatabase()
     .db()
     .collection("transactions")
-    .deleteOne({ _id: userId });
-  if (response.deletedCount > 0) {
-    res.status(200).send("Goal deleted successfully!");
+    .find({ _id: req.params.id });
+
+  if (result) {
+    console.log("transaction found!");
+    const newReverse = {
+      githubId: req.body.githubId,
+      transactionId: req.body.transactionId,
+      justification: req.body.justification,
+      dateOfReversed: req.body.dateOfReversed,
+    };
+    const createReverse = await mongodb
+      .getDatabase()
+      .db()
+      .collection("reverses")
+      .insertOne(newReverse);
+
+    if (createReverse.acknowledged > 0) {
+      console.log("this is the result ", result);
+
+      const updatedTransaction = {
+        accountOrigin: result.accountOrigin,
+        nameAccountOrigin: result.nameAccountOrigin,
+        accountDestiny: result.accountDestiny,
+        nameAccountDestiny: result.nameAccountDestiny,
+        transactionDate: result.transactionDate,
+        reference: result.reference,
+        status: "reversed",
+      };
+      const response = await mongodb
+        .getDatabase()
+        .db()
+        .collection("transactions")
+        .replaceOne({ _id: req.params.id }, updatedTransaction);
+
+      if (response.modifiedCount > 0) {
+        res.status(200).send("Transaction reverse created successfully!");
+      } else {
+        res
+          .status(200)
+          .json(
+            response.error || "Error during the update of the transaction!"
+          );
+      }
+    } else {
+      res
+        .status(200)
+        .json(
+          response.error ||
+            "Some Error ocurred while reversing the transacction"
+        );
+    }
   } else {
-    res
-      .status(200)
-      .json(
-        response.error ||
-          `Transaction not found`
-      );
+    return res.status(404).json({ error: "Transaction not found!" });
   }
-  } else {
-    return res.status(404).json({ error: "Transaction id invalid!" });
-  }
-  
 };
 
 const getUserTransactions = async (req, res) => {
   //#swagger.tags=['Transactions']
-  if (req.params.id.length == 24) {
+  if (req.params.githubId.length == 24) {
     console.log("get user transactions");
-  console.log("from params ", req.params.id);
-  const userId = req.params.id;
-  const results = await mongodb
-    .getDatabase()
-    .db()
-    .collection("transactions")
-    .find({ idUser: userId });
-  results.toArray().then((transactions) => {
-    res.setHeader("Content-Type", "application/json");
-    res.status(200).json(transactions);
-  });
+    console.log("from params ", req.params.githubId);
+    const githubId = req.params.githubId;
+    const results = await mongodb
+      .getDatabase()
+      .db()
+      .collection("transactions")
+      .findMany({ githubId });
+    results.toArray().then((transactions) => {
+      res.setHeader("Content-Type", "application/json");
+      res.status(200).json(transactions);
+    });
   } else {
     return res.status(404).json({ error: "User id invalid!" });
   }
-  
 };
 
 module.exports = {
- createTransaction,
- reverseTransaction,
- getUserTransactions
+  createTransaction,
+  reverseTransaction,
+  getUserTransactions,
 };
