# routes/transactions.js
@@ -7,7 +7,7 @@ const validationTransaction = require('../validation/validationTransaction');
 const { isAuthenticated } = require('../middleware/authenticate');
 
 router
-  .get('/:id', isAuthenticated, transactionsController.getUserTransactions)
+  .get('/:githubId', isAuthenticated, transactionsController.getUserTransactions)
   .post('/sendMoney', isAuthenticated, validationTransaction, transactionsController.createTransaction)
   .delete('/reverse/:id', isAuthenticated, transactionsController.reverseTransaction)
   
