# validation/validationUser.js
@@ -7,7 +7,6 @@ const validationUser = [
   body("birthday").notEmpty().withMessage("Birthday is required!"),
   body("addressId").notEmpty().withMessage("User address is required!"),
   body("githubId").notEmpty().withMessage("GithubId is required!"),
-  body("accountId").notEmpty().withMessage("AccountID is required!"),
   body("email").notEmpty().withMessage("email is required").trim().isEmail().withMessage("Email format is incorrect!")
 ];
 
